--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       navigator.mediaDevices.getUserMedia({
         audio: true,
         video: {
-          facingMode: 'user', // Use front camera on mobile
+          facingMode: 'environment', // Use front camera on mobile
           width: { ideal: 1280 },
           height: { ideal: 720 }
         }
